--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.5.0",
     "eslint-config-standard-with-typescript": "^16.0.0",
@@ -39,5 +39,8 @@
     "lint-staged": "^10.2.11",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "validator": "^13.1.1"
   }
 }
