chore: add jest configs for mongodb

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/Remysonrodrigues/clean-ts-api#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.1",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.8",
+    "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -43,6 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.0",
     "validator": "^13.1.1"
   }
 }
