--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.8",
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
@@ -45,6 +46,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.0",
     "validator": "^13.1.1"
   }
