--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.8",
     "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.5.0",
@@ -43,6 +44,7 @@
     "jest": "^26.2.2",
     "lint-staged": "^10.2.11",
     "sucrase": "^3.15.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
